[gd_scene load_steps=5 format=3 uid="uid://ccy4qililt3t3"]

[ext_resource type="Theme" uid="uid://bfw6ylcttychc" path="res://Themes/Themes/AverageButton.tres" id="1_7726x"]
[ext_resource type="Script" uid="uid://masdq75k62tf" path="res://Code/Scenes/UI/List/tutor_box.gd" id="2_g0t8c"]
[ext_resource type="Resource" uid="uid://dbbymvfonstmf" path="res://Resources/Components/Effects/Search/CastawaySearch.tres" id="3_kc6ps"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kclru"]
bg_color = Color(0.12549, 0.109804, 0.117647, 0.780392)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[node name="tutor_dock" type="Control"]
clip_contents = true
custom_minimum_size = Vector2(420, 508)
layout_mode = 3
anchors_preset = 0
offset_right = 420.0
offset_bottom = 13.0
theme = ExtResource("1_7726x")
script = ExtResource("2_g0t8c")
search = ExtResource("3_kc6ps")
start_text = "[center]"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 420.0
offset_bottom = 508.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Header" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"DeepPannel"

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/Header"]
layout_mode = 2
bbcode_enabled = true
text = "[center] SELECTED CARDS"
fit_content = true

[node name="ScrollBox" type="ScrollContainer" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_kclru")
follow_focus = true

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/VBoxContainer/ScrollBox"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/ScrollBox/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/ScrollBox/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/ScrollBox/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 5

[node name="CardList" type="VBoxContainer" parent="PanelContainer/VBoxContainer/ScrollBox/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer/ScrollBox/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_bottom = 15

[node name="Requirements" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_vertical = 8
theme_type_variation = &"DeepPannel"

[node name="ReqText" type="RichTextLabel" parent="PanelContainer/VBoxContainer/Requirements"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
bbcode_enabled = true
fit_content = true

[node name="ConfirmBox" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 49)
layout_mode = 2
mouse_filter = 1
theme_type_variation = &"DeepPannel"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/ConfirmBox"]
layout_mode = 2
alignment = 1

[node name="Status" type="RichTextLabel" parent="PanelContainer/VBoxContainer/ConfirmBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 2
bbcode_enabled = true
text = "[center]Tutor Number: X / X"
fit_content = true

[node name="Confirm" type="Button" parent="PanelContainer/VBoxContainer/ConfirmBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Yes"

[connection signal="pressed" from="PanelContainer/VBoxContainer/ConfirmBox/HBoxContainer/Confirm" to="." method="_on_confirm_pressed"]
